# butterfly-effect

./: .env.example  .gitignore  AI_IDE_PROMPTS.md  ARCHITECTURE.md  BACKEND_FRONTEND_SYNC.md  CI_STATUS.md  COMPLETION_SUMMARY.md  EXAMPLES.md  FILES_CREATED.md  FINAL_INTEGRATION_STATUS.md  FRONTEND_COMPLETE.md  IMPLEMENTATION_STATUS.md  INTEGRATION_COMPLETE.md  INTEGRATION_STATUS.md  LOGGING_INTEGRATION_SUMMARY.md  PROGRESS.md  PROMPT_FIX.md  QUICKSTART.md  QUICKSTART_FRONTEND.md  QUICK_REFERENCE.md  REAL_VS_DEMO.md  RECOVERY_PROMPT.md  ReadMe.md  SHIP_IT.md  START_HERE.md  TEST_PIPELINE.sh  TIER_1_CREDIBILITY_UPGRADES.md  TIER_1_EXECUTIVE_SUMMARY.md  TIER_2_MEDIUM_TERM.md  VERIFICATION_CHECKLIST.md  context.md  docker-compose.yml  test_backend_frontend.sh
backend/: KL5suggestions.txt  KL5suggestionvisual.md  LOGGING_GUIDE.md  PHASE_1_2_README.md  TEST_LOGGING.md  TIER_1_INTEGRATION_GUIDE.md  pyproject.toml  requirements.txt
backend/butterfly/: config.py  logging_utils.py  main.py  worker.py
backend/data/: activity.jsonl  activity_run_0352891193.jsonl  activity_run_148754f9ad.jsonl  activity_run_189f8a5a3e.jsonl  activity_run_1dd89b6dc9.jsonl  activity_run_2a5d84dd83.jsonl  activity_run_2b6ea5c43c.jsonl  activity_run_499e6cee0a.jsonl  activity_run_4c8ee36c56.jsonl  activity_run_55a727b2a1.jsonl  activity_run_5cc3e15594.jsonl  activity_run_64d8bfd809.jsonl  activity_run_9d5f347357.jsonl  activity_run_ac1eba9b44.jsonl  activity_run_b1a72aa3e5.jsonl  activity_run_b2cdcf700f.jsonl  activity_run_b4129e826f.jsonl  activity_run_ca6dca762b.jsonl  activity_run_d75804f425.jsonl  activity_run_dc9cb1534d.jsonl  activity_run_e69c0f6b7f.jsonl  activity_run_ea13212a9e.jsonl  activity_run_efc2a92578.jsonl  butterfly.db  (+1 more)
(+210 files in other folders)
