[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "butterfly-effect"
version = "0.1.0"
description = "Causal inference engine for cascade effects"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Om Kawale", email = "om@butterfly-effect.dev"}]

dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.27.0",
    "pydantic==2.6.4",
    "pydantic-settings==2.2.1",
    "python-dotenv==1.0.0",
    "neo4j==5.17.0",
    "sqlalchemy[asyncio]==2.0.25",
    "asyncpg==0.29.0",
    "celery==5.3.4",
    "redis==5.0.1",
    "httpx==0.27.0",
    "loguru==0.7.2",
    "pytest==7.4.4",
    "pytest-asyncio==0.23.3",
]

[project.optional-dependencies]
dev = [
    "ruff==0.3.5",
    "mypy==1.8.0",
    "black==24.1.1",
    "pytest-cov==4.1.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "PIE", "PT", "RUF"]
ignore = ["E501"]  # Line too long (handled by formatter)

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --strict-markers"
markers = [
    "integration: marks tests as integration tests",
    "slow: marks tests as slow",
]
